royal customers and orders by date

--- a/notebooks/analysis.ipynb
+++ b/notebooks/analysis.ipynb
@@ -1205,9 +1205,485 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a2e48f09-c00a-4bb5-bccd-9dabd87cfba5",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ab768e7b-8a2b-4acf-9dba-73e3221a1fa6",
+   "metadata": {},
+   "source": [
+    "##### Which customers have made the highest number of orders?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "3311f457-4aed-4c06-83d9-950e77c0f820",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>customer_id</th>\n",
+       "      <th>customer_name</th>\n",
+       "      <th>total_orders</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>116</td>\n",
+       "      <td>Merlene Vinson</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>77</td>\n",
+       "      <td>Keri Bridges</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>68</td>\n",
+       "      <td>Jayne Kirkland</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>66</td>\n",
+       "      <td>Lorrie Becker</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>64</td>\n",
+       "      <td>Bobbie Foster</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>61</td>\n",
+       "      <td>Elinore Aguilar</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>56</td>\n",
+       "      <td>Lolita Mosley</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>53</td>\n",
+       "      <td>Saturnina Garner</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>50</td>\n",
+       "      <td>Cleotilde Booth</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>47</td>\n",
+       "      <td>Bridgette Guerra</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   customer_id     customer_name  total_orders\n",
+       "0          116    Merlene Vinson             3\n",
+       "1           77      Keri Bridges             3\n",
+       "2           68    Jayne Kirkland             3\n",
+       "3           66     Lorrie Becker             3\n",
+       "4           64     Bobbie Foster             3\n",
+       "5           61   Elinore Aguilar             3\n",
+       "6           56     Lolita Mosley             3\n",
+       "7           53  Saturnina Garner             3\n",
+       "8           50   Cleotilde Booth             3\n",
+       "9           47  Bridgette Guerra             3"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "query=\"\"\"\n",
+    "SELECT customer_id,CONCAT(first_name,' ',last_name) as customer_name,\n",
+    "    COUNT(DISTINCT order_id) as total_orders \n",
+    "FROM customers\n",
+    "JOIN orders\n",
+    "USING (customer_id)\n",
+    "JOIN order_items\n",
+    "USING (order_id)\n",
+    "GROUP BY customer_id\n",
+    "ORDER BY total_orders DESC\n",
+    "LIMIT 10\n",
+    "\"\"\"\n",
+    "execute_query(query)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "77e16b5e-d509-448c-bd2e-99aa6d92dacf",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d7af628e-0420-4d0f-a92e-9755d1c34fb6",
+   "metadata": {},
+   "source": [
+    "##### in which month and which year the most orders have been made?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "d9f59fde-5f0e-440f-b4a6-248ef05ed66b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>year</th>\n",
+       "      <th>month</th>\n",
+       "      <th>order_count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2018</td>\n",
+       "      <td>April</td>\n",
+       "      <td>125</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2018</td>\n",
+       "      <td>March</td>\n",
+       "      <td>68</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2016</td>\n",
+       "      <td>September</td>\n",
+       "      <td>67</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2017</td>\n",
+       "      <td>March</td>\n",
+       "      <td>67</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2017</td>\n",
+       "      <td>August</td>\n",
+       "      <td>65</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2017</td>\n",
+       "      <td>October</td>\n",
+       "      <td>65</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>2016</td>\n",
+       "      <td>October</td>\n",
+       "      <td>64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>2016</td>\n",
+       "      <td>August</td>\n",
+       "      <td>63</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>2017</td>\n",
+       "      <td>June</td>\n",
+       "      <td>63</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>2017</td>\n",
+       "      <td>April</td>\n",
+       "      <td>57</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>2017</td>\n",
+       "      <td>February</td>\n",
+       "      <td>57</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>2017</td>\n",
+       "      <td>May</td>\n",
+       "      <td>57</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>2016</td>\n",
+       "      <td>December</td>\n",
+       "      <td>55</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>2016</td>\n",
+       "      <td>March</td>\n",
+       "      <td>55</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>2017</td>\n",
+       "      <td>November</td>\n",
+       "      <td>55</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>2017</td>\n",
+       "      <td>September</td>\n",
+       "      <td>53</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>2017</td>\n",
+       "      <td>July</td>\n",
+       "      <td>52</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>2018</td>\n",
+       "      <td>January</td>\n",
+       "      <td>52</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>2016</td>\n",
+       "      <td>May</td>\n",
+       "      <td>51</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>2016</td>\n",
+       "      <td>January</td>\n",
+       "      <td>50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>2016</td>\n",
+       "      <td>July</td>\n",
+       "      <td>50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>2017</td>\n",
+       "      <td>January</td>\n",
+       "      <td>50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>2016</td>\n",
+       "      <td>February</td>\n",
+       "      <td>49</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>2017</td>\n",
+       "      <td>December</td>\n",
+       "      <td>47</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>2016</td>\n",
+       "      <td>June</td>\n",
+       "      <td>45</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>2016</td>\n",
+       "      <td>April</td>\n",
+       "      <td>43</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>2016</td>\n",
+       "      <td>November</td>\n",
+       "      <td>43</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>2018</td>\n",
+       "      <td>February</td>\n",
+       "      <td>35</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>2018</td>\n",
+       "      <td>July</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>2018</td>\n",
+       "      <td>August</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>2018</td>\n",
+       "      <td>November</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>2018</td>\n",
+       "      <td>December</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32</th>\n",
+       "      <td>2018</td>\n",
+       "      <td>June</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33</th>\n",
+       "      <td>2018</td>\n",
+       "      <td>October</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34</th>\n",
+       "      <td>2018</td>\n",
+       "      <td>September</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    year      month  order_count\n",
+       "0   2018      April          125\n",
+       "1   2018      March           68\n",
+       "2   2016  September           67\n",
+       "3   2017      March           67\n",
+       "4   2017     August           65\n",
+       "5   2017    October           65\n",
+       "6   2016    October           64\n",
+       "7   2016     August           63\n",
+       "8   2017       June           63\n",
+       "9   2017      April           57\n",
+       "10  2017   February           57\n",
+       "11  2017        May           57\n",
+       "12  2016   December           55\n",
+       "13  2016      March           55\n",
+       "14  2017   November           55\n",
+       "15  2017  September           53\n",
+       "16  2017       July           52\n",
+       "17  2018    January           52\n",
+       "18  2016        May           51\n",
+       "19  2016    January           50\n",
+       "20  2016       July           50\n",
+       "21  2017    January           50\n",
+       "22  2016   February           49\n",
+       "23  2017   December           47\n",
+       "24  2016       June           45\n",
+       "25  2016      April           43\n",
+       "26  2016   November           43\n",
+       "27  2018   February           35\n",
+       "28  2018       July            4\n",
+       "29  2018     August            2\n",
+       "30  2018   November            2\n",
+       "31  2018   December            1\n",
+       "32  2018       June            1\n",
+       "33  2018    October            1\n",
+       "34  2018  September            1"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "query=\"\"\"\n",
+    "SELECT  STRFTIME('%Y',order_date) AS year,\n",
+    "        CASE strftime('%m', order_date)\n",
+    "        WHEN '01' THEN 'January'\n",
+    "        WHEN '02' THEN 'February'\n",
+    "        WHEN '03' THEN 'March'\n",
+    "        WHEN '04' THEN 'April'\n",
+    "        WHEN '05' THEN 'May'\n",
+    "        WHEN '06' THEN 'June'\n",
+    "        WHEN '07' THEN 'July'\n",
+    "        WHEN '08' THEN 'August'\n",
+    "        WHEN '09' THEN 'September'\n",
+    "        WHEN '10' THEN 'October'\n",
+    "        WHEN '11' THEN 'November'\n",
+    "        WHEN '12' THEN 'December'\n",
+    "        END AS month,\n",
+    "        COUNT(DISTINCT order_id) as order_count\n",
+    "FROM orders\n",
+    "GROUP BY year,month\n",
+    "ORDER BY order_count DESC\n",
+    "\"\"\"\n",
+    "execute_query(query)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "05e69ffa-382b-4c7f-b172-043915eb3524",
+   "id": "f8126947-e975-4586-9ba3-444c710cdaa3",
    "metadata": {},
    "outputs": [],
    "source": []
