shippments with delay

--- a/notebooks/analysis.ipynb
+++ b/notebooks/analysis.ipynb
@@ -1681,9 +1681,169 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e999bd6f-6a31-45e8-ba7e-6fef8969d776",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "76572d09-2046-4eab-bfa3-a3562e6dfde8",
+   "metadata": {},
+   "source": [
+    "##### How many orders were shipped late?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "923ff75f-c6a0-4345-9ad6-7f8973c9ec89",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>shippment_with_delay_count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>963</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   shippment_with_delay_count\n",
+       "0                         963"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "query=\"\"\"\n",
+    "SELECT COUNT(order_id) as shippment_with_delay_count\n",
+    "FROM orders\n",
+    "WHERE shipped_date>=required_date\n",
+    "        AND shipped_date IS NOT NULL\n",
+    "        AND required_date IS NOT NULL\n",
+    "\"\"\"\n",
+    "execute_query(query)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e7b1101d-28e8-4c87-8232-eb9abf2d8426",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3f791043-cbf3-4237-a40e-07c328130c3d",
+   "metadata": {},
+   "source": [
+    "##### which stores have shipped orders more frequnt?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "ade57c68-8fc5-42b0-bc29-e9633e20042f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>shippment_with_delay_count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>688</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>192</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>83</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   shippment_with_delay_count\n",
+       "0                         688\n",
+       "1                         192\n",
+       "2                          83"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "query=\"\"\"\n",
+    "SELECT COUNT(order_id) shippment_with_delay_count\n",
+    "FROM orders\n",
+    "WHERE shipped_date>=required_date\n",
+    "        AND shipped_date IS NOT NULL\n",
+    "        AND required_date IS NOT NULL\n",
+    "GROUP BY store_id\n",
+    "ORDER BY shippment_with_delay_count DESC\n",
+    "\"\"\"\n",
+    "execute_query(query)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f8126947-e975-4586-9ba3-444c710cdaa3",
+   "id": "412bbff7-e05f-42b5-986e-187e0ecfb63f",
    "metadata": {},
    "outputs": [],
    "source": []
