Revenue by store

--- a/notebooks/analysis.ipynb
+++ b/notebooks/analysis.ipynb
@@ -2193,8 +2193,95 @@
    "id": "60af471a-b711-4b7c-af93-2a274dec078b",
    "metadata": {},
    "source": [
-    "##### Which stores have earne"
+    "##### Which stores have earned more revenue?"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "473058fc-1886-4a8c-8b8f-775f01bd8132",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>store_name</th>\n",
+       "      <th>total_revenue_thousand</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Baldwin Bikes</td>\n",
+       "      <td>5215.75</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Santa Cruz Bikes</td>\n",
+       "      <td>1605.82</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Rowlett Bikes</td>\n",
+       "      <td>867.54</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         store_name  total_revenue_thousand\n",
+       "0     Baldwin Bikes                 5215.75\n",
+       "1  Santa Cruz Bikes                 1605.82\n",
+       "2     Rowlett Bikes                  867.54"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "query=\"\"\"\n",
+    "SELECT store_name, \n",
+    "        ROUND(SUM(oi.quantity*oi.list_price*(1-oi.discount)/1000),2) as total_revenue_thousand\n",
+    "FROM stores AS s\n",
+    "LEFT JOIN orders AS o\n",
+    "USING(store_id)\n",
+    "LEFT JOIN order_items oi\n",
+    "USING (order_id)\n",
+    "GROUP BY store_id\n",
+    "ORDER BY total_revenue_thousand DESC\n",
+    "\"\"\"\n",
+    "\n",
+    "execute_query(query)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8e893b80-2073-428e-9095-0fe8e1101d31",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
