one/multiple order customers

--- a/notebooks/analysis.ipynb
+++ b/notebooks/analysis.ipynb
@@ -1765,12 +1765,12 @@
    "id": "3f791043-cbf3-4237-a40e-07c328130c3d",
    "metadata": {},
    "source": [
-    "##### which stores have shipped orders more frequnt?"
+    "##### Which stores have shipped orders late more frequently?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 71,
    "id": "ade57c68-8fc5-42b0-bc29-e9633e20042f",
    "metadata": {},
    "outputs": [
@@ -1822,7 +1822,7 @@
        "2                          83"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1841,9 +1841,87 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "850cbf8e-ef3b-4302-a05c-c6e142662c89",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "537d0447-c9d6-4e58-806b-f9166d213470",
+   "metadata": {},
+   "source": [
+    "##### How many customers have made only one order, and how many have made more than one?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "803dbf53-a458-4342-a8c2-d6fa091b1310",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>one_order_customers_count</th>\n",
+       "      <th>multiple_order_customers_count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1314</td>\n",
+       "      <td>131</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   one_order_customers_count  multiple_order_customers_count\n",
+       "0                       1314                             131"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "query=\"\"\"\n",
+    "SELECT SUM(CASE WHEN order_count=1 THEN 1 ELSE 0 END) as one_order_customers_count,\n",
+    "        SUM(CASE WHEN order_count>1 THEN 1 ELSE 0 END) as multiple_order_customers_count\n",
+    "FROM (\n",
+    "SELECT customer_id,COUNT(DISTINCT order_id) as order_count\n",
+    "FROM orders\n",
+    "GROUP BY customer_id\n",
+    ")\n",
+    "\"\"\"\n",
+    "execute_query(query)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "412bbff7-e05f-42b5-986e-187e0ecfb63f",
+   "id": "2bca4720-5b0d-4ae7-9312-eef72d2636ab",
    "metadata": {},
    "outputs": [],
    "source": []
