move: execute_query from notebooks to scripts

--- a/notebooks/analysis.ipynb
+++ b/notebooks/analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "9ce16b67-eef9-42aa-81db-f9064c5a3513",
    "metadata": {},
    "outputs": [],
@@ -13,33 +13,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "41edc08b-224e-4825-92ac-49b9c786ea94",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%run ../notebooks/connection.ipynb"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 3,
-   "id": "b8904680-0183-428a-94f1-a51f8fb87bfe",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def execute_query(query:str):\n",
-    "    return pd.read_sql_query(query,connection)\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "45298631-94c7-4c2a-bc5f-53c4a0e235de",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "%run ../scripts/execute_query.ipynb"
+   ]
   },
   {
    "cell_type": "code",
